<resources>
    <string name="app_name">SberTroyka</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_text">Проект</string>
    <string name="walk_type_text">Пешеходная</string>
    <string name="duration_text">Время</string>
    <string name="minutes_text">мин.</string>
    <string name="route_text">Маршрут</string>
    <string name="type_text">Тип</string>
    <string name="authors_text">Авторы</string>
    <string name="next_button_text">Далее</string>
    <string name="back_button_text">Назад</string>
    <string name="walks_title_text">Прогулки от метро</string>
    <string name="start_walk">Начать прогулку</string>
    <string name="ilyushin_author_text">Ильюшин</string>
    <string name="todo">TODO</string>
    <string name="author_tag">Ilya Glushko</string>
    <string name="favorite_text">Избранное</string>
    <string name="recent_text">Недавнее</string>
    <string name="media_text">Медиа</string>
    <string name="gallery_text">Галерея</string>
</resources>